--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://ushinghal19.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
 #  - bookshelf.md
-#  - blog/index.html
+ - blog/index.html
  - courses.md
 
 # Google services
