--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ enable_mathjax: true
 extended_fonts: false
 enable_anchorjs: false
 # Preview image for social media aka og:image and twitter:image
-post_preview_image: true
+post_preview_image: false
 
 # Facebook Page integration
 # (for instant articles and other stuff)
