--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ header_pages:
 google_verification:
 # Use either direct GA implementation or set up GTM account
 # - using both will skew your data (leave blank to not use at all)
-google_analytics:
+google_analytics: G-TVKLJ50H3E
 google_tag_manager:
 # Bing services
 bing_verification:
